# text_preprocessing

./: main.py  pdfplumber_test.py  pypdf_test.py  pyproject.toml
Pdfplumber_test/: 교보생명(무)교보LTC.txt  삼성생명개인용애니카다이렉트.txt  한화손해개인용자동차보험_BEL_테스트.txt
Pretraining_TXT/: KB손해개인용자동차보험_removed.txt  KB손해업무용자동차보험_removed.txt  KB손해종합용자동차보험_removed.txt  교보생명(무)교보LTC종신보험 중도부가특약_removed.txt  교보생명(무)교보New내생애맞춤건강보험_removed.txt  교보생명(무)교보New플러스하이브리드변액종신보험  중도부가특약_removed.txt  라이나생명무배당THE간편고지종신보험(기본형)_기납입P플러스형_removed.txt  라이나생명무배당THE건강해지는종신보험(기본형)_가입금액형_removed.txt  라이나생명무배당가족사랑플랜정기보험(갱신형)_removed.txt  삼성생명플래티넘행복연금보험(2307)(무배당)_removed.txt  삼성생명하이브리드연금보험(2211)(무배당)_removed.txt  삼성생명혈액형별보장보험(2204)(무배당)특정질병추천플랜_removed.txt  삼성화재개인용애니카다이렉트자동차보험_removed.txt  삼성화재업무용애니카개인소유다이렉트자동차보험_removed.txt  삼성화재업무용애니카법인소유다이렉트자동차보험_removed.txt  한화생명 간편가입 H3 3.0종신보험 무배당_removed.txt  한화생명 간편가입 시그니처 암보험 3.0(비갱신형) 무배당_removed.txt  한화손해개인용자동차보험(공동물건)_removed.txt  한화손해업무용자동차보험(공동물건)_removed.txt  한화손해영업용자동차보험(공동물건)_removed.txt
Pretraining_TXT_Pdfplumber/: KB손해개인용자동차보험_removed.txt  KB손해업무용자동차보험_removed.txt  KB손해종합용자동차보험_removed.txt  교보생명(무)교보LTC종신보험 중도부가특약_removed.txt  교보생명(무)교보New내생애맞춤건강보험_removed.txt  교보생명(무)교보New플러스하이브리드변액종신보험  중도부가특약_removed.txt  라이나생명무배당THE간편고지종신보험(기본형)_기납입P플러스형_removed.txt  라이나생명무배당THE건강해지는종신보험(기본형)_가입금액형_removed.txt  라이나생명무배당가족사랑플랜정기보험(갱신형)_removed.txt  삼성생명플래티넘행복연금보험(2307)(무배당)_removed.txt  삼성생명하이브리드연금보험(2211)(무배당)_removed.txt  삼성생명혈액형별보장보험(2204)(무배당)특정질병추천플랜_removed.txt  삼성화재개인용애니카다이렉트자동차보험_removed.txt  삼성화재업무용애니카개인소유다이렉트자동차보험_removed.txt  삼성화재업무용애니카법인소유다이렉트자동차보험_removed.txt  (+5 more)
(+3 files in other folders)
