[tool.poetry]
name = "llm-text-preprocessing"
version = "0.1.0"
description = ""
authors = ["or-m-or <htth815@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.0"
charset-normalizer = "3.3.1"
pdfplumber = "^0.10.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
